# audiodecoder.modplug

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.modplug/: addon.xml  addon.xml.in
audiodecoder.modplug/resources/language/resource.language.af_za/: strings.po
audiodecoder.modplug/resources/language/resource.language.am_et/: strings.po
audiodecoder.modplug/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.modplug/resources/language/resource.language.ast_es/: strings.po
audiodecoder.modplug/resources/language/resource.language.az_az/: strings.po
audiodecoder.modplug/resources/language/resource.language.be_by/: strings.po
audiodecoder.modplug/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.modplug/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.modplug/resources/language/resource.language.ca_es/: strings.po
debian/: changelog.in  control  copyright  rules
depends/common/modplug/: CMakeLists.txt  modplug.sha256
depends/windows/: CMakeLists.txt
depends/windows/modplug/: 0001-remove-unistd-h.patch  0001-update-stdafx-h.patch  0002-update-stdafx-h.patch  0003-C++17_deprecated.patch  0003-fix-pow.patch  0004-fix-rand.patch  0005-fix-_mm_free.patch  CMakeLists.txt  modplug.sha256  modplug.txt
depends/windowsstore/modplug/: 0002-disable-asm-win64.patch  0003-fix-uwp-build.patch  CMakeLists.txt  modplug.txt
src/: ModplugCodec.cpp  ModplugCodec.h
(+71 files in other folders)
